--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -15,6 +15,14 @@
       body {
         margin-top: 60px;
       }
+      
+      .ok {
+        color: green;
+      }
+      .no {
+        color: red;
+      }
+    
     </style>
 
 
