--- a/projeto/product/templates/produto_list.html
+++ b/projeto/product/templates/produto_list.html
@@ -1,19 +1,5 @@
 {% extends "base.html" %}
 
-{% block css %}
-
-    <style>
-        .ok {
-            color: green;
-        }
-        .no {
-            color: red;
-        }
-    
-    </style>
-
-{% endblock css %}
-
 {% block content %}
 
 <div class="page-header">
@@ -43,7 +29,10 @@
                             {% endif %}
                         </td>
                         <td>{{ object.codigo }}</td>
-                        <td>{{ object.produto }}</td>
+                        <td>
+                            <a href="{{ object.get_absolute_url }}">{{ object.produto }}</a>
+
+                            </td>
                         <td>R$ <span class="pull-right">{{ object.preco }}</span></td>
                         <td class="text-center">{{ object.estoque }}</td>
                         <td class="text-center">{{ object.estoque_minimo }}</td>
