--- a/projeto/product/templates/produto_form.html
+++ b/projeto/product/templates/produto_form.html
@@ -2,11 +2,41 @@
 
 {% load widget_tweaks %} <!--https://github.com/jazzband/django-widget-tweaks-->
 
+{% block css %}
+<style>
+    span.required:after{
+        content:"*";
+        color: red; 
+    }
+</style>
+{% endblock css %}
+
 {% block content %}
 
 <form method="POST" novalidate>
     {% csrf_token %} <!--Token necessario para fazer o POST dos dados no formulário-->
-
+    {% for field in form.visible_fields  %} <!--Exibe os campos do meu model Produto em um formulário.-->
+        <div class="form-group{% if field.errors %} has-error {% endif %}">
+            <label for="{{ field.id_for_label }}">
+                {% if field.field.required %}
+                    <span class="required">{{ field.label }} </span>
+                {% else %}
+                    {{ field.label }}
+                {% endif %}
+            </label>
+            {% render_field field class="form-control" %}
+            {% for error in field.errors %}
+                <span class="text-muted">{{ error }}</span>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-success">Cadastrar</button>
 </form>
 
 {% endblock content %}
+
+{% block js %} <!--Remove espaço do form-control -->
+<script> 
+    $('#id_importado').removeClass('form-control');
+</script>
+{% endblock js %}
