--- a/projeto/product/templates/produto_detail.html
+++ b/projeto/product/templates/produto_detail.html
@@ -11,7 +11,16 @@
             </button>
         </a>
     </span>
+    <span class="pull-right">
+        <a href="{% url 'product:produto_delete' object.pk %}"><!--object.pk porque ele foi passado na url-->
+            <button type="button" class="btn btn-danger">
+                <span class="fa fa-pencil"></span> Deletar  
+            </button>
+        </a>
+    </span>
 </h1>
+
+    
 
 <div class="col-sm-6">
     <table class="table table-user-information">
