--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -41,6 +41,9 @@
               <li class="nav-item">
                   <a class="nav-link" href="{% url 'product:produto_list' %}">Produtos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:8000/chat/">Chat</a>
+            </li>
               {% else %}
               <div class="pull-right">
                 <li class="nav-item">
